Updated languages, UK seems to be in russian lmao. Removed build artifact zip.

--- a/resources/assets/vsvillage/lang/pt-br.json
+++ b/resources/assets/vsvillage/lang/pt-br.json
@@ -117,5 +117,73 @@
     "quest-gather10MeatFor4OnionSeeds-obj": "Carne fornecida: {0}/10",
     "quest-gather10MeatFor4SpeltSeeds-title": "To desidratando de tanto comer trigo cru",
     "quest-gather10MeatFor4SpeltSeeds-desc": "Minha dieta poderia ter um pouco mais de variação. Se você me der 10 carnes de qualquer tipo, eu posso te dar umas 4 sementes de trigo de espelta em troca.",
-    "quest-gather10MeatFor4SpeltSeeds-obj": "Carne fornecida: {0}/10"
+    "quest-gather10MeatFor4SpeltSeeds-obj": "Carne fornecida: {0}/10",
+    "quest-cull2HaresFor20Carrots-title": "Problema da lebre",
+    "quest-cull2HaresFor20Carrots-desc": "Aquelas lebres terríveis não param de comer minhas plantações. Livre-se delas e eu dividirei algumas cenouras com você.",
+    "quest-cull2HaresFor20Carrots-obj": "Lebres mortas: {0}/2",
+    "quest-cull2HaresFor20Spelt-title": "Problema da lebre",
+    "quest-cull2HaresFor20Spelt-desc": "Aquelas lebres terríveis não param de comer minhas plantações. Livre-se delas e eu dividirei algumas cenouras com você.",
+    "quest-cull2HaresFor20Spelt-obj": "Lebres mortas: {0}/2",
+    "quest-sell1CheesewheelFor4Gears-title": "Adoraria um pouco de queijo para o meu pão",
+    "quest-sell1CheesewheelFor4Gears-desc": "Consegui algumas engrenagens de um viajante que passou por aqui. Ficaria feliz em comprar um pouco de queijo de você, se tiver uma roda sobrando.",
+    "quest-sell1CheesewheelFor4Gears-obj": "Roda de queijo coletada: {0}/1",
+    "quest-gather12CharcoalFor4Gears-title": "A forja permanece fria hoje",
+    "quest-gather12CharcoalFor4Gears-desc": "Quero produzir algumas ferramentas de ferro novas, mas esqueci de preparar o carvão. Pode me ajudar a coletar um pouco? Posso te pagar por isso.",
+    "quest-gather12CharcoalFor4Gears-obj": "Carvão coletado: {0}/12 coletado",
+    "quest-buy1BlackGuardSword-title": "Criando uma arma de grande poder",
+    "quest-buy1BlackGuardSword-desc": "Se você me entregar os materiais, junto com o pagamento pelo meu trabalho, posso forjar uma arma de qualidade excepcional para você.",
+    "quest-buy1BlackGuardSword-obj": "Lingotes de ferro coletados: {0}/1\nCarvão coletado: {1}/1\nEngrenagens enferrujadas coletadas: {2}/4",
+    "quest-upgradeGambison-title": "Melhorando seu jaquetão",
+    "quest-upgradeGambison-desc": "Com o pagamento e um conjunto de jaquetão, acho que posso ajustá-lo para que caiba melhor em você.",
+    "quest-upgradeGambison-obj": "Capacete de jaquetão: {0}/1\nArmadura corporal de jaquetão: {1}/1\nPerneiras de jaquetão: {2}/1\nEngrenagens enferrujadas coletadas: {3}/32",
+    "quest-gather16HayFor1BlueCheesewheel-title": "Feno por roda de queijo azul",
+    "quest-gather16HayFor1BlueCheesewheel-desc": "Preciso de ajuda para coletar feno para o gado. Recolha 16 unidades e eu dividirei um pouco do queijo do meu estoque com você.",
+    "quest-gather16HayFor1BlueCheesewheel-obj": "Feno coletado: {0}/16",
+    "quest-gather16HayFor1CheddarCheesewheel-title": "Feno por roda de queijo de cheddar",
+    "quest-gather16HayFor1CheddarCheesewheel-desc": "Preciso de ajuda para coletar feno para o gado. Recolha 16 unidades e eu dividirei um pouco do queijo do meu estoque com você.",
+    "quest-gather16HayFor1CheddarCheesewheel-obj": "Feno coletado: {0}/16",
+    "quest-gather6GrainFor12Eggs-title": "Grãos por uma dúzia de ovos",
+    "quest-gather6GrainFor12Eggs-desc": "Minhas galinhas precisam de mais grãos para continuarem botando tantos ovos. Ficarei feliz em lhe dar uma dúzia de ovos por alguns grãos.",
+    "quest-gather6GrainFor12Eggs-obj": "Grãos coletados: {0}/6",
+    "quest-gather24GrainFor18Poultry-title": "Grãos por carne de frango",
+    "quest-gather24GrainFor18Poultry-desc": "Minhas galinhas ficaram velhas e gordas. Preciso de mais espaço para que a nova geração cresça adequadamente. Posso lhe oferecer um pouco de carne em troca de alguns grãos simples.",
+    "quest-gather24GrainFor18Poultry-obj": "Grãos coletados: {0}/24",
+    "quest-gather24GrainFor18Redmeat-title": "Grãos por carne vermelha",
+    "quest-gather24GrainFor18Redmeat-desc": "Minhas ovelhas ficaram velhas e gordas. Preciso de mais espaço para que a nova geração cresça adequadamente. Posso lhe oferecer um pouco de carne em troca de alguns grãos simples.",
+    "quest-gather24GrainFor18Redmeat-obj": "Grãos coletados: {0}/24",
+    "quest-kill2WolvesFor8Gears-title": "Proteja o gado",
+    "quest-kill2WolvesFor8Gears-desc": "Os lobos estão perdendo o respeito pelo fogo. Estão se aproximando cada vez mais do gado que estou cuidando. Posso te recompensar se você conseguir afastá-los.",
+    "quest-kill2WolvesFor8Gears-obj": "Lobos mortos: {0}/2",
+    "quest-kill3FoxesFor8Gear-title": "Proteja as galinhas",
+    "quest-kill3FoxesFor8Gear-desc": "Recentemente uma raposa invadiu meu galinheiro e dizimou meus animais. Não quero que isso aconteça de novo. Se alguém conseguir caçar seis dessas raposas, estarei disposto a pagar uma engrenagem como recompensa.",
+    "quest-kill3FoxesFor8Gear-obj": "Raposas mortas: {0}/3",
+    "quest-kill50DriftersFor20Gears-title": "Calafrios de outro mundo",
+    "quest-kill50DriftersFor20Gears-desc": "A floresta já não é mais segura. Vagantes estão por toda parte. Se você conseguir limpar os arredores, podemos pagar um preço justo.",
+    "quest-kill50DriftersFor20Gears-obj": "Vagantes mortos: {0}/50",
+    "quest-kill2NightmareDriftersFor12Gears-title": "O rosnado das profundezas indescritíveis",
+    "quest-kill2NightmareDriftersFor12Gears-desc": "Não podemos mais extrair minerais das montanhas devido às criaturas que espreitam nas cavernas lá embaixo. Estamos dispostos a pagar um preço generoso a quem ajudar a limpar as profundezas dos vagantes do pesadelo.",
+    "quest-kill2NightmareDriftersFor12Gears-obj": "Vagantes do pesadelo mortos: {0}/2",
+    "quest-recruitvillager-title": "À sua disposição",
+    "quest-recruitvillager-desc": "Por uma pequena quantidade de engrenagens eu posso acompanhá-lo e protegê-lo por um dia.",
+    "quest-recruitvillager-obj": "Engrenagens enferrujadas: {0}/2",
+    "quest-repairingAnOldSet1-title": "Uma nova agulha de cobre",
+    "quest-repairingAnOldSet1-desc": "Preciso de um lingote de cobre para uma nova agulha médica. Tenho um antigo conjunto de armaduras que posso te dar peça por peça se você continuar trabalhando para mim.",
+    "quest-repairingAnOldSet1-obj": "Coletar lingote de cobre {0}/1",
+    "quest-repairingAnOldSet2-title": "Fio de linho para furos",
+    "quest-repairingAnOldSet2-desc": "Eu preciso de um pouco de fio de linho para fazer bandagens e consertar o buraco dessa armadura que estou te dando.",
+    "quest-repairingAnOldSet2-obj": "Coletar fio de linho {0}/12",
+    "quest-repairingAnOldSet3-title": "Comida para o inverno",
+    "quest-repairingAnOldSet3-desc": "Se você puder me trazer comida para o inverno, eu lhe darei a última peça do conjunto de armaduras que tenho.",
+    "quest-repairingAnOldSet3-obj": "Coletar vegetais {0}/32",
+    "quest-sell24HorsetailFor3Gears-title": "Uma necessidade de cavalinhas",
+    "quest-sell24HorsetailFor3Gears-desc": "Os suprimentos estão acabando e eu preciso de mais cavalinhas. Posso pagar, é claro.",
+    "quest-sell24HorsetailFor3Gears-obj": "Cavalinha coletada: {0}/24",
+    "quest-sell10PowderedSulfurFor2Gears-title": "Uma necessidade de enxofre em pó",
+    "quest-sell10PowderedSulfurFor2Gears-desc": "Os suprimentos estão acabando e eu preciso de mais enxofre em pó. Posso pagar, é claro.",
+    "quest-sell10PowderedSulfurFor2Gears-obj": "Enxofre em pó coletado: {0}/10",
+    "quest-healplayersetup-title": "Configure os suprimentos antes de curar",
+    "quest-healplayersetup-desc": "Para poder agir como seu curandeiro, preciso de algumas coisas básicas: materiais para bandagens, uma pedra e um graveto para esmagar ervas, e um favo para tratar os ferimentos. Depois que você me trouxer esses itens iniciais, poderei me virar sozinho.",
+    "quest-healplayersetup-obj": "Cavalinhas coletadas: {0}/12\nPedra coletada: {1}/1\nGraveto coletado: {2}/1\nFavo coletado: {3}/2\nTaboas coletadas: {0}/12",
+    "quest-healplayer-title": "Uma visita ao médico",
+    "quest-healplayer-desc": "Se você levar uma surra, eu posso dar uma olhada nos seus ferimentos."
 }
