--- a/resources/assets/vsvillage/lang/ru.json
+++ b/resources/assets/vsvillage/lang/ru.json
@@ -58,6 +58,7 @@
     "management-destroy-village-text": "Вы уверены, что хотите разрушить поселение?",
     "management-destroy-village-button": "Разрушить поселение",
     "management-update-village-button": "Улучшить поселение",
+    "management-no-village-found": "Этот блок в настоящее время не связан с деревней. Вы хотите найти новый?",
     "management-village-name": "Название:",
     "management-village-radius": "Радиус:",
     "management-found-new-village": "Заложить новое поселение",
@@ -76,6 +77,7 @@
     "management-hire-herbalist": "Нанять травника",
     "management-hire-mayor": "Нанять старосту",
     "management-hire-archer": "Нанять лучника",
+    "management-poi-stats": "В этой деревне имеется в общей сложности <strong>{0} кроватей</strong>, <strong>{1} рабочих станций</strong> и <strong>{2} мест сбора</strong>.\nЭто резиденция <strong>{3} жителей</strong>.\nЖители и рабочие станции разделены следующим образом:\n",
     "management-profession-stats": "Профессия: <strong>{0}</strong>\t Поселенцев: {1}\t Рабочих станций: {2}\n",
     "management-profession-farmer": "фермер",
     "management-profession-shepherd": "пастух",
@@ -88,6 +90,7 @@
     "lives-in-debug": "Место жительства: {0}.\nМесто работы: {1}\nМесто отдыха: {2}",
     "nowhere": "нигде",
     "resides-in": "Относится к: {0}.",
+    "owned-by": "Владелец: {0}.",
     "nobody": "никто",
     "everybody": "все",
     "missing-in-action": "Пропавший без вести",
