--- a/resources/assets/vsvillage/lang/uk.json
+++ b/resources/assets/vsvillage/lang/uk.json
@@ -34,6 +34,7 @@
     "item-villagerhorn": "Призивний ріг",
     "itemdesc-villagerhorn": "Можна використовувати для виклику допомоги",
     "interact-villager-horn": "Націльтесь на землю поруч і здетонуйте, щоб покликати на допомогу, визволивши мешканця з ржавого світу!",
+    "villagerguide-title": "Села та селяни",
     "villagerguide-text": "<strong>Села та мешканці</strong>\n\nВи можете натрапити на села, подорожуючи світом. Мешканці, що ходять цими селами, зазвичай дружелюбні, якщо їх не провокувати. Деякі з них будуть торгувати з вами, інші можуть захистити вас від злих ворогів. Більшість з них виконують дрібні завдання протягом дня залежно від своєї професії.\n\nТакож є можливість заснувати власне село. Все, що вам потрібно, це виготовити <a href=\"handbook://item-vsvillage:villagerhorn\">ріжок</a> і подути в нього, щоб викликати торговця-мешканця. Він продає всі речі, які потрібні вашим мешканцям, такі як робочі місця, ліжка та вогнище, навколо якого можна зібратися. Робоче місце мера має бути першим блоком, який ви купите.\n\nЯкщо у вас встановлений <a href=\"https://mods.vintagestory.at/vsquest\">VS Quest</a>, ви навіть зможете приймати місії від різних мешканців.\n\nЯк тільки ви викличете кілька мешканців, вам потрібно буде забезпечити їм укриття. Кожен мешканець хоче мати ліжко для сну вночі та <a href=\"handbooksearch://workstation\">робоче місце</a>, щоб займатися чимось в день. Ваші мешканці також люблять збиратися біля <a href=\"handbook://block-vsvillage:brazier-extinct\">вогнища</a> ввечері, щоб поспілкуватися.\n\nДля того щоб знайти дорогу, мешканці використовують <a href=\"handbook://block-vsvillage:waypoint\">вказівники</a>. Ви можете розмістити їх у своєму селі, щоб допомогти їм орієнтуватися. Щоб побачити, чи правильно вони з’єднуються, наберіть /highlightvillagewaypoints і перевірте, чи підсвічується шлях між ними. Вказівники намагатимуться з’єднатися лише в тому випадку, якщо вони знаходяться менше ніж за 50 блоків один від одного та з’єднані через блоки шляху або ущільнені блоки ґрунту.",
     "block-workstation-soldier-*": "Робоча станція (солдат)",
     "block-workstation-smith-*": "Робоча станція (коваль)",
@@ -71,6 +72,118 @@
     "management-hire-farmer": "Найняти фермера",
     "management-hire-shepherd": "Найняти пастуха",
     "management-hire-trader": "Найняти торговця",
+    "management-hire-smith": "Найняти коваля",
+    "management-hire-soldier": "Найняти солдата",
+    "management-hire-herbalist": "Найняти травника",
+    "management-hire-mayor": "Найняти мера",
+    "management-hire-archer": "Найняти лучника",
+    "management-poi-stats": "Це село має загалом <strong>{0} ліжок</strong>, <strong>{1} робочих місць</strong> та <strong>{2} місць для зборів</strong>.\nТут проживає <strong>{3} селян</strong>.\nСеляни та робочі місця розподілені наступним чином:\n",
+    "management-profession-stats": "Професія: <strong>{0}</strong> Селяни: {1} Робочі місця: {2}\n",
     "management-profession-farmer": "фермер",
-    "quest-kill50DriftersFor20Gears-obj": "Вбито дрифтерів: {0}/50"
+    "management-profession-shepherd": "пастух",
+    "management-profession-trader": "торговець",
+    "management-profession-smith": "коваль",
+    "management-profession-soldier": "солдат",
+    "management-profession-herbalist": "травник",
+    "management-profession-mayor": "мер",
+    "lives-in": "Мешканець {0}.",
+    "lives-in-debug": "Мешканець {0}.\nПрацює в: {1}\nСпить у: {2}",
+    "nowhere": "ніде",
+    "resides-in": "Належить {0}.",
+    "owned-by": "Належить {0}.",
+    "nobody": "ніхто",
+    "everybody": "усі",
+    "missing-in-action": "Зниклий безвісти",
+    "quest-gatherMeatForSeed-title": "М'ясо за насіння",
+    "quest-gatherMeatForSeed-desc": "Моєму раціону не завадила б різноманітність. Якщо ви надасте 25 одиниць будь-якого м'яса, я можу запропонувати вам насіння натомість.",
+    "quest-gatherMeatForSeed-obj": "Зібрано м'яса: {0}/25",
+    "quest-gatherMeatForGrain-title": "М'ясо в обмін на зерно",
+    "quest-gatherMeatForGrain-desc": "Моєму раціону не завадила б різноманітність. Якщо ви принесете 20 одиниць будь-якого м'яса, я можу запропонувати вам зерно натомість.",
+    "quest-gatherMeatForGrain-obj": "Зібрано м'яса: {0}/20",
+    "quest-gather10MeatFor4FlaxSeeds-title": "У лляному волокні немає білка",
+    "quest-gather10MeatFor4FlaxSeeds-desc": "Моєму раціону не завадила б різноманітність. Якщо ви принесете 10 одиниць будь-якого м'яса, я можу запропонувати вам насіння натомість.",
+    "quest-gather10MeatFor4FlaxSeeds-obj": "Зібрано м'яса: {0}/10",
+    "quest-gather10MeatFor4ParsnipSeeds-title": "У пастернаку немає білка",
+    "quest-gather10MeatFor4ParsnipSeeds-desc": "Моєму раціону не завадила б різноманітність. Якщо ви принесете 10 одиниць будь-якого м'яса, я можу запропонувати вам насіння натомість.",
+    "quest-gather10MeatFor4ParsnipSeeds-obj": "Зібрано м'яса: {0}/10",
+    "quest-gather10MeatFor4TurnipSeeds-title": "У ріпі немає білка",
+    "quest-gather10MeatFor4TurnipSeeds-desc": "Моєму раціону не завадила б різноманітність. Якщо ви принесете 10 одиниць будь-якого м'яса, я можу запропонувати вам щось натомість.",
+    "quest-gather10MeatFor4TurnipSeeds-obj": "Зібрано м'яса: {0}/10",
+    "quest-gather10MeatFor4CarrotSeeds-title": "У моркві немає білка",
+    "quest-gather10MeatFor4CarrotSeeds-desc": "Моєму раціону не завадила б різноманітність. Якщо ви принесете 10 одиниць будь-якого м'яса, я можу запропонувати вам насіння натомість.",
+    "quest-gather10MeatFor4CarrotSeeds-obj": "Зібрано м'яса: {0}/10",
+    "quest-gather10MeatFor4OnionSeeds-title": "У цибулі немає білка",
+    "quest-gather10MeatFor4OnionSeeds-desc": "Моєму раціону не завадила б різноманітність. Якщо ви принесете 10 одиниць будь-якого м'яса, я можу запропонувати вам насіння натомість.",
+    "quest-gather10MeatFor4OnionSeeds-obj": "Зібрано м'яса: {0}/10",
+    "quest-gather10MeatFor4SpeltSeeds-title": "У зерні немає білка",
+    "quest-gather10MeatFor4SpeltSeeds-desc": "Моєму раціону не завадила б різноманітність. Якщо ви принесете 10 одиниць будь-якого м'яса, я можу запропонувати вам насіння натомість.",
+    "quest-gather10MeatFor4SpeltSeeds-obj": "Зібрано м'яса: {0}/10",
+    "quest-cull2HaresFor20Carrots-title": "Проблема з зайцями",
+    "quest-cull2HaresFor20Carrots-desc": "Ці жахливі зайці продовжують їсти мої посіви. Позбудьтеся їх, і я поділюся з вами морквою.",
+    "quest-cull2HaresFor20Carrots-obj": "Зайців вбито: {0}/2",
+    "quest-cull2HaresFor20Spelt-title": "Проблема з зайцями",
+    "quest-cull2HaresFor20Spelt-desc": "Ці жахливі зайці продовжують їсти мої посіви. Позбудьтеся їх, і я поділюся з вами спельтою.",
+    "quest-cull2HaresFor20Spelt-obj": "Зайців вбито: {0}/2",
+    "quest-sell1CheesewheelFor4Gears-title": "Хотілося б сиру до хліба",
+    "quest-sell1CheesewheelFor4Gears-desc": "Я отримав кілька шестерень від мандрівника. Із задоволенням купив би у вас сиру, якби знайшовся цілий на продаж.",
+    "quest-sell1CheesewheelFor4Gears-obj": "Зібрано круг сиру: {0}/1",
+    "quest-gather12CharcoalFor4Gears-title": "Кузня сьогодні холодна",
+    "quest-gather12CharcoalFor4Gears-desc": "Я хочу виготовити нові залізні інструменти, але забув підготувати деревне вугілля. Можете допомогти мені зібрати трохи? Я заплачу.",
+    "quest-gather12CharcoalFor4Gears-obj": "Зібрано деревного вугілля: {0}/12",
+    "quest-buy1BlackGuardSword-title": "Створення могутньої зброї",
+    "quest-buy1BlackGuardSword-desc": "Якщо ви дасте мені матеріали та плату за роботу, я зможу створити для вас зброю виняткової якості.",
+    "quest-buy1BlackGuardSword-obj": "Зібрано залізних зливків: {0}/1\nЗібрано деревного вугілля: {1}/1\nЗібрано іржавих шестерень: {2}/4",
+    "quest-upgradeGambison-title": "Покращення вашого гамбезона",
+    "quest-upgradeGambison-desc": "Якщо заплатите та принесете комплект гамбезона, я зможу підігнати його, щоб він краще на вас сидів, нуу я так гадаю.",
+    "quest-upgradeGambison-obj": "Гамбезон (шолом): {0}/1\nГамбезон (нагрудник): {1}/1\nГамбезон (наголінники): {2}/1\nЗібрано іржавих шестерень: {3}/32",
+    "quest-gather16HayFor1BlueCheesewheel-title": "Сіно за круг блакитного сиру",
+    "quest-gather16HayFor1BlueCheesewheel-desc": "Мені потрібна допомога зі збором сіна для худоби. Зберіть 16 одиниць, і я поділюся сиром зі своїх запасів.",
+    "quest-gather16HayFor1BlueCheesewheel-obj": "Зібрано сіна: {0}/16",
+    "quest-gather16HayFor1CheddarCheesewheel-title": "Сіно за круг сиру чедер",
+    "quest-gather16HayFor1CheddarCheesewheel-desc": "Мені потрібна допомога зі збором сіна для худоби. Зберіть 16 одиниць, і я поділюся сиром зі своїх запасів.",
+    "quest-gather16HayFor1CheddarCheesewheel-obj": "Зібрано сіна: {0}/16",
+    "quest-gather6GrainFor12Eggs-title": "Зерно за дюжину яєць",
+    "quest-gather6GrainFor12Eggs-desc": "Моїм куркам потрібно більше зерна, щоб вони неслися так само добре. Я з радістю віддам вам дюжину яєць за трохи зерна.",
+    "quest-gather6GrainFor12Eggs-obj": "Зібрано зерна: {0}/6",
+    "quest-gather24GrainFor18Poultry-title": "Зерно за курятину",
+    "quest-gather24GrainFor18Poultry-desc": "Мої кури постаріли й розтовстіли. Мені потрібно звільнити місце, щоб молоде покоління могло рости. За трохи зерна я можу запропонувати вам м'яса.",
+    "quest-gather24GrainFor18Poultry-obj": "Зібрано зерна: {0}/24",
+    "quest-gather24GrainFor18Redmeat-title": "Зерно за червоне м'ясо",
+    "quest-gather24GrainFor18Redmeat-desc": "Мої вівці постаріли й розтовстіли. Мені потрібно звільнити місце, щоб молоде покоління могло рости. За трохи зерна я можу запропонувати вам м'яса.",
+    "quest-gather24GrainFor18Redmeat-obj": "Зібрано зерна: {0}/24",
+    "quest-kill2WolvesFor8Gears-title": "Захист худоби",
+    "quest-kill2WolvesFor8Gears-desc": "Вовки перестали боятися вогню. Вони підбираються все ближче й ближче до худоби, яку я пасу. Я віддячу вам, якщо ви їх відженете.",
+    "quest-kill2WolvesFor8Gears-obj": "Вбито вовків: {0}/2",
+    "quest-kill3FoxesFor8Gear-title": "Захист курей",
+    "quest-kill3FoxesFor8Gear-desc": "Нещодавно лисиця залізла в мій курник і понищила мою птицю. Я не хочу, щоб це повторилося. Якщо хтось зможе вполювати трьох цих лисиць, я добре заплачу.",
+    "quest-kill3FoxesFor8Gear-obj": "Вбито лисиць: {0}/3",
+    "quest-kill50DriftersFor20Gears-title": "Тремтіння з іншого світу",
+    "quest-kill50DriftersFor20Gears-desc": "У лісах просто стало небезпечно. Дрифтери тепер усюди. Якщо ви зможете зачистити від них околиці, ми заплатимо вам гідну ціну.",
+    "quest-kill50DriftersFor20Gears-obj": "Вбито дрифтерів: {0}/50",
+    "quest-kill2NightmareDriftersFor12Gears-title": "Гуркіт з невимовних глибин",
+    "quest-kill2NightmareDriftersFor12Gears-desc": "Ми більше не можемо добувати мінерали з гір через істот, що ховаються в печерах глибоко внизу. Ми готові заплатити щедру ціну будь-кому, хто допоможе очистити глибини від кошмарних Дрифтерів.",
+    "quest-kill2NightmareDriftersFor12Gears-obj": "Вбито кошмарних Дрифтерів: {0}/2",
+    "quest-recruitvillager-title": "До ваших послуг",
+    "quest-recruitvillager-desc": "За невелику кількість шестерень я можу супроводжувати та захищати вас протягом дня.",
+    "quest-recruitvillager-obj": "Іржаві шестерні: {0}/2",
+    "quest-repairingAnOldSet1-title": "Нова мідна голка",
+    "quest-repairingAnOldSet1-desc": "Мені потрібен мідний злиток для нової медичної голки. У мене є старий комплект броні, який я можу давати вам по частинах, якщо ви продовжите працювати зі мною.",
+    "quest-repairingAnOldSet1-obj": "Зібрати мідний злиток {0}/1",
+    "quest-repairingAnOldSet2-title": "Лляна нитка для дірок",
+    "quest-repairingAnOldSet2-desc": "Мені потрібна лляна нитка, щоб робити бинти та латати дірки в цьому комплекті броні, який я вам віддаю.",
+    "quest-repairingAnOldSet2-obj": "Зібрати лляну нитку {0}/12",
+    "quest-repairingAnOldSet3-title": "Їжа на зиму",
+    "quest-repairingAnOldSet3-desc": "Якщо ви зможете дістати мені їжу на зиму, я віддам вам останню частину комплекту броні, що в мене є.",
+    "quest-repairingAnOldSet3-obj": "Зібрати овочі {0}/32",
+    "quest-sell24HorsetailFor3Gears-title": "Потреба у хвощі",
+    "quest-sell24HorsetailFor3Gears-desc": "Запаси закінчуються, і мені потрібно більше хвоща. Звісно, я можу заплатити.",
+    "quest-sell24HorsetailFor3Gears-obj": "Зібрано хвоща: {0}/24",
+    "quest-sell10PowderedSulfurFor2Gears-title": "Потреба в порошковій сірці",
+    "quest-sell10PowderedSulfurFor2Gears-desc": "Запаси закінчуються, і мені потрібно ще порошкової сірки. Звісно, я заплачу.",
+    "quest-sell10PowderedSulfurFor2Gears-obj": "Зібрано порошкової сірки: {0}/10",
+    "quest-healplayersetup-title": "Підготовка речей для лікування",
+    "quest-healplayersetup-desc": "Щоб я міг вас лікувати, мені потрібні деякі базові речі. Матеріали для бинтів, камінь і палиця для подрібнення трав, а також стільники для обробки ран. Я зможу забезпечувати себе сам, коли ви принесете мені ці базові речі.",
+    "quest-healplayersetup-obj": "Зібрано хвоща: {0}/12\nЗібрано каміння: {1}/1\nЗібрано палиць: {2}/1\nЗібрано стільників: {3}/2\nЗібрано рогозу: {0}/12",
+    "quest-healplayer-title": "Візит до лікаря",
+    "quest-healplayer-desc": "Якщо вас добряче поб'ють, я можу оглянути ваші рани."
 }
